--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.1.0",
